// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Input Snapshots Render default input 1`] = `
<div
  class="brz-ed-control__input2 brz-ed-control__input2--auto"
>
  <input
    type="text"
    value="dffd"
  />
</div>
`;

exports[`Test Input Snapshots Render large input 1`] = `
<div
  class="brz-ed-control__input2 brz-ed-control__input2--large"
>
  <input
    type="text"
    value="1111"
  />
</div>
`;

exports[`Test Input Snapshots Render medium input 1`] = `
<div
  class="brz-ed-control__input2 brz-ed-control__input2--medium"
>
  <input
    type="text"
    value=""
  />
</div>
`;

exports[`Test Input Snapshots Render short input 1`] = `
<div
  class="brz-ed-control__input2 brz-ed-control__input2--short"
>
  <input
    type="text"
    value="Short Input"
  />
</div>
`;
